@@ -10,9 +10,9 @@ import it.unive.lisa.analysis.value.ValueDomain;
 import it.unive.lisa.program.cfg.ProgramPoint;
 import it.unive.lisa.symbolic.value.Identifier;
 import it.unive.lisa.symbolic.value.ValueExpression;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
@@ -21,24 +21,24 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 
 	private static int STACK_LIMIT = 32;
 	private static final AbstractStack TOP = new AbstractStack(
-			new LinkedList<KIntegerSet>(Collections.nCopies(STACK_LIMIT, KIntegerSet.NUMERIC_TOP)));
+			new ArrayList<>(Collections.nCopies(STACK_LIMIT, StackElement.NUMERIC_TOP)));
 	private static final AbstractStack BOTTOM = new AbstractStack(null);
 
-	private final LinkedList<KIntegerSet> stack;
+	private final ArrayList<StackElement> stack;
 
 	/**
-	 * Builds a initial symbolic stack.
+	 * Builds an initial symbolic stack.
 	 */
 	public AbstractStack() {
-		this.stack = new LinkedList<KIntegerSet>(Collections.nCopies(STACK_LIMIT, KIntegerSet.BOTTOM));
+		this.stack = new ArrayList<>(Collections.nCopies(STACK_LIMIT, StackElement.BOTTOM));
 	}
 
 	/**
 	 * Builds a symbolic stack starting from a given stack.
-	 * 
+	 *
 	 * @param stack the stack of values
 	 */
-	public AbstractStack(LinkedList<KIntegerSet> stack) {
+	public AbstractStack(ArrayList<StackElement> stack) {
 		this.stack = stack;
 	}
 
@@ -113,11 +113,10 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 	public boolean isTop() {
 		if (isBottom())
 			return false;
-		else if (this.stack.stream()
-				.anyMatch(element -> !element.isTop()))
-			return false;
-		else
-			return true;
+		for (StackElement element : this.stack)
+			if (!element.isTop())
+				return false;
+		return true;
 	}
 
 	@Override
@@ -153,75 +152,75 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 	}
 
 	/**
-	 * Getter for the KIntegerSet at the top of the stack.
-	 * 
-	 * @return the KIntegerSet at the top of the stack.
+	 * Getter for the StackElement at the top of the stack.
+	 *
+	 * @return the StackElement at the top of the stack.
 	 */
-	public KIntegerSet getTop() {
-		return this.stack.getLast();
+	public StackElement getTop() {
+		return this.stack.get(stack.size() - 1); // Get the last element
 	}
 
 	@Override
 	public AbstractStack clone() {
 		if (isBottom() || isTop())
 			return this;
-		return new AbstractStack(new LinkedList<>(stack));
+		return new AbstractStack(new ArrayList<>(stack));
 	}
 
 	/**
-	 * Pushes the specified KIntegerSet onto the stack.
+	 * Pushes the specified element onto the stack.
 	 *
-	 * @param target the KIntegerSet to be pushed onto the stack.
+	 * @param target the element to be pushed onto the stack.
 	 */
-	public void push(KIntegerSet target) {
-		stack.addLast(target);
-		stack.removeFirst();
+	public void push(StackElement target) {
+		stack.remove(0);
+		stack.add(target);
 	}
 
 	/**
-	 * Pops the KIntegerSet from the stack.
+	 * Pops the element from the stack.
 	 *
-	 * @return the KIntegerSet at the top of the stack.
+	 * @return the element at the top of the stack.
 	 */
-	public KIntegerSet pop() {
-		KIntegerSet result = stack.removeLast();
-		if (!stack.getFirst().isTop())
-			stack.addFirst(KIntegerSet.BOTTOM);
+	public StackElement pop() {
+		StackElement result = stack.remove(stack.size() - 1);
+		if (!stack.get(0).isTop())
+			stack.add(0, StackElement.BOTTOM);
 		else
-			stack.addFirst(KIntegerSet.NUMERIC_TOP);
+			stack.add(0, StackElement.NUMERIC_TOP);
 		return result;
-
 	}
 
 	/**
-	 * Returns the number of item in the stack.
+	 * Returns the number of items in the stack (non-bottom).
 	 *
-	 * @return the number of item in the stack.
+	 * @return the number of items in the stack.
 	 */
 	public int size() {
 		int bottomCounter = 0;
-		Iterator<KIntegerSet> it = stack.iterator();
-		while (it.hasNext() && it.next().isBottom())
-			bottomCounter++;
-
+		for (StackElement item : stack) {
+			if (item.isBottom()) {
+				bottomCounter++;
+			}
+		}
 		return stack.size() - bottomCounter;
 	}
 
-	public List<KIntegerSet> getStack() {
+	public List<StackElement> getStack() {
 		return stack;
 	}
 
 	@Override
 	public AbstractStack lubAux(AbstractStack other) throws SemanticException {
-		LinkedList<KIntegerSet> result = new LinkedList<>();
+		ArrayList<StackElement> result = new ArrayList<>(STACK_LIMIT);
 
-		Iterator<KIntegerSet> thisIterator = this.stack.iterator();
-		Iterator<KIntegerSet> otherIterator = other.stack.iterator();
+		Iterator<StackElement> thisIterator = this.stack.iterator();
+		Iterator<StackElement> otherIterator = other.stack.iterator();
 
 		while (thisIterator.hasNext() && otherIterator.hasNext()) {
-			KIntegerSet thisElement = thisIterator.next();
-			KIntegerSet otherElement = otherIterator.next();
-			result.addLast(thisElement.lub(otherElement));
+			StackElement thisElement = thisIterator.next();
+			StackElement otherElement = otherIterator.next();
+			result.add(thisElement.lub(otherElement));
 		}
 
 		return new AbstractStack(result);
@@ -229,15 +228,15 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 
 	@Override
 	public AbstractStack wideningAux(AbstractStack other) throws SemanticException {
-		LinkedList<KIntegerSet> result = new LinkedList<>();
+		ArrayList<StackElement> result = new ArrayList<>(STACK_LIMIT);
 
-		Iterator<KIntegerSet> thisIterator = this.stack.iterator();
-		Iterator<KIntegerSet> otherIterator = other.stack.iterator();
+		Iterator<StackElement> thisIterator = this.stack.iterator();
+		Iterator<StackElement> otherIterator = other.stack.iterator();
 
 		while (thisIterator.hasNext() && otherIterator.hasNext()) {
-			KIntegerSet thisElement = thisIterator.next();
-			KIntegerSet otherElement = otherIterator.next();
-			result.addLast(thisElement.widening(otherElement));
+			StackElement thisElement = thisIterator.next();
+			StackElement otherElement = otherIterator.next();
+			result.add(thisElement.widening(otherElement));
 		}
 
 		return new AbstractStack(result);
@@ -245,15 +244,15 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 
 	@Override
 	public AbstractStack glbAux(AbstractStack other) throws SemanticException {
-		LinkedList<KIntegerSet> result = new LinkedList<>();
+		ArrayList<StackElement> result = new ArrayList<>(STACK_LIMIT);
 
-		Iterator<KIntegerSet> thisIterator = this.stack.iterator();
-		Iterator<KIntegerSet> otherIterator = other.stack.iterator();
+		Iterator<StackElement> thisIterator = this.stack.iterator();
+		Iterator<StackElement> otherIterator = other.stack.iterator();
 
 		while (thisIterator.hasNext() && otherIterator.hasNext()) {
-			KIntegerSet thisElement = thisIterator.next();
-			KIntegerSet otherElement = otherIterator.next();
-			result.addLast(thisElement.glb(otherElement));
+			StackElement thisElement = thisIterator.next();
+			StackElement otherElement = otherIterator.next();
+			result.add(thisElement.glb(otherElement));
 		}
 
 		return new AbstractStack(result);
@@ -261,8 +260,8 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 
 	@Override
 	public boolean lessOrEqualAux(AbstractStack other) throws SemanticException {
-		Iterator<KIntegerSet> thisIterator = this.stack.iterator();
-		Iterator<KIntegerSet> otherIterator = other.stack.iterator();
+		Iterator<StackElement> thisIterator = this.stack.iterator();
+		Iterator<StackElement> otherIterator = other.stack.iterator();
 
 		while (thisIterator.hasNext() && otherIterator.hasNext()) {
 			if (!thisIterator.next().lessOrEqual(otherIterator.next())) {
@@ -273,17 +272,17 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 		return true;
 	}
 
-	public KIntegerSet getSecondElement() {
+	public StackElement getSecondElement() {
 		if (isBottom())
-			return KIntegerSet.BOTTOM;
+			return StackElement.BOTTOM;
 		else if (isTop())
-			return KIntegerSet.NUMERIC_TOP;
+			return StackElement.NUMERIC_TOP;
 		return this.stack.get(STACK_LIMIT - 2);
 	}
 
 	/**
-	 * Set the stack limit
-	 * 
+	 * Set the stack limit.
+	 *
 	 * @param n the new stack limit
 	 */
 	public static void setStackLimit(int n) {
@@ -292,8 +291,8 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 	}
 
 	/**
-	 * Yields the stack limit
-	 * 
+	 * Yields the stack limit.
+	 *
 	 * @return the stack limit
 	 */
 	public static int getStackLimit() {
@@ -302,7 +301,8 @@ public class AbstractStack implements ValueDomain<AbstractStack>, BaseLattice<Ab
 
 	/**
 	 * Checks whether between 0 and x-positions of the stack an element is
-	 * bottom.
+	 * bottom. /** Checks whether between 0 and x-positions of the stack an
+	 * element is bottom.
 	 * 
 	 * @param x the position
 	 * 
